--- a/website/css/creative.css
+++ b/website/css/creative.css
@@ -40,13 +40,14 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', serif;
   font-weight: 700;
+  color: white;
 }
 
 p {
   font-family: 'Lato', sans-serif;
-  font-size: 1.1em;
+  font-size: 1.2em;
 }
 
 .bg-primary {
