--- a/website/css/la_fraterna.css
+++ b/website/css/la_fraterna.css
@@ -63,7 +63,13 @@ header .overlay {
 }
 
 #cultura {
-    background-color: #2222;
+    background-image: url("../img/portfolio/cultura.JPG");
+
+        /* Create the parallax scrolling effect */
+  
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
 }
 .parallax {
     /* The image used */
