--- a/website/scss/la_fraterna_sass.scss
+++ b/website/scss/la_fraterna_sass.scss
@@ -6,8 +6,9 @@ $color3: rgba(203, 232, 150, 1);
 $color4: rgba(255, 255, 252, 1);
 $color4-transparent: rgba(255, 255, 252, 0.7);
 $color5: rgba(62, 92, 118, 1);
+$color6: #e8703b;
 
-/* Media queries sizes */ 
+/* Media queries sizes */
 $break-small: 576px;
 $break-medium: 720px;
 $break-large: 992px;
@@ -32,12 +33,32 @@ a,
   opacity: 0.5;
   z-index: 1;
 }
+.overlayCultura {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  opacity: 0.5;
+}
 
 #header-fraterna {
   .overlay {
     top: 0;
     left: 0;
-  } 
+  }
+}
+
+#cultura.parallax {
+  background-image: url("../img/cultura.jpg");
+}
+
+#cultura {
+  h2 {
+    color: $color6;
+  }
+  p {
+    color: $color4;
+  }
 }
 
 #contact.parallax {
@@ -45,7 +66,6 @@ a,
 }
 
 #contact {
-
   color: $color1;
 
   h2 {
@@ -83,25 +103,25 @@ a,
     background-color: $color4-transparent;
     border-radius: 5px;
   }
-  
+
   input:focus {
     border-bottom: 2px solid transparent;
   }
-  
+
   input:focus::-webkit-input-placeholder,
   textarea:focus::-webkit-input-placeholder{ /* WebKit browsers */
     color: transparent;
   }
-  
+
   ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: $color1;
     opacity: 1; /* Firefox */
   }
-  
+
   :-ms-input-placeholder { /* Internet Explorer 10-11 */
     color: $color1;
   }
-  
+
   ::-ms-input-placeholder { /* Microsoft Edge */
     color: $color1;
   }
@@ -112,7 +132,7 @@ a,
 }
 
 .parallax {
-  min-height: 650px; 
+  min-height: 650px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
