--- a/website/scss/la_fraterna_sass.scss
+++ b/website/scss/la_fraterna_sass.scss
@@ -54,10 +54,19 @@ a,
 
 #cultura {
   h2 {
-    color: $color6;
+    color: $color4;
+    font-size: 40px;
+  }
+  h4 {
+    color: $color4;
+    font-size: 30px;
   }
   p {
     color: $color4;
+  }
+  img {
+  width: 300px;
+  height: 200px;
   }
 }
 
